--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,9 +12,14 @@ executables:
 dependencies:
   path: ^1.8.3
   collection: ^1.17.0
+  graph_explorer: ^1.0.1
 
 dev_dependencies:
   lints: ^1.0.1
   dependency_validator: ^3.2.2
   test: ^1.21.4
   coverage: ^1.2.0
+
+#dependency_overrides:
+#  graph_explorer:
+#    path: ../graph_explorer
